...
                                <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OpenXC Demo App" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Chx-w3-p6f">
                                        <rect key="frame" x="10" y="11" width="172" height="24"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
...
                                        </constraints>
                                        <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
                                        <state key="normal" title="Settings">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bus" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3vU-lg-Vdj">
                                <rect key="frame" x="24" y="233.33333333333334" width="100" height="22.666666666666657"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Vx-5l-Vke">
                                        <rect key="frame" x="339" y="10" width="65" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="SettingButton"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="65" id="QlD-bm-lHc"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Payload (hex)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Grg-zv-ycw">
                                <rect key="frame" x="14.000000000000007" y="188" width="103.66666666666669" height="20.333333333333343"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                <state key="normal" title="SEND">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sent Messages" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ddm-Fm-msL">
                                <rect key="frame" x="14" y="422.33333333333331" width="106" height="14.333333333333314"/>
                                <constraints>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Send CAN" id="J6u-F0-x0L">
                        <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="-15"/>
                    </tabBarItem>
...
                                        <rect key="frame" x="342" y="10" width="54" height="30"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                        <state key="normal" title="Dismiss">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kyr-A2-FA5">
                                        <rect key="frame" x="25" y="80" width="92" height="30"/>
                                        <state key="normal" title="Recording">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vpn-iW-l8J">
                                        <rect key="frame" x="25" y="130" width="92" height="30"/>
                                        <state key="normal" title="Output">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DuN-bd-qoe">
                                        <rect key="frame" x="25" y="180" width="92" height="30"/>
                                        <state key="normal" title="Notification">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                <rect key="frame" x="4" y="49" width="406" height="689"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Record Trace" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ETK-gy-cDb">
                                        <rect key="frame" x="23" y="58" width="120" height="21"/>
                                        <constraints>
...
                                        </connections>
                                    </textField>
